--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "eslint --fix \"src/**/*.{js,jsx,ts,tsx}\"",
@@ -33,6 +34,7 @@
     "lucide-react": "^0.507.0",
     "next": "^15.3.1",
     "next-intl": "^4.1.0",
+    "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.8.16",
     "react": "^19.1.0",
