--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "clsx": "^2.1.1",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
+    "formidable": "^3.5.4",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.507.0",
     "next": "^15.3.1",
@@ -51,6 +52,7 @@
     "@tailwindcss/postcss": "^4.1.4",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/aos": "^3.0.7",
+    "@types/formidable": "^3.4.5",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^22.15.2",
     "@types/react": "19.1.2",
