--- a/package.json
+++ b/package.json
@@ -14,6 +14,12 @@
     "lint:fix": "eslint --fix \"src/**/*.{js,jsx,ts,tsx}\"",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\""
   },
+  "browserslist": [
+  "last 2 Chrome versions",
+  "last 2 Edge versions",
+  "last 2 Firefox versions",
+  "last 2 Safari versions"
+],
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-accordion": "^1.2.10",
