--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\""
   },
   "browserslist": [
-  "last 2 Chrome versions",
-  "last 2 Edge versions",
-  "last 2 Firefox versions",
-  "last 2 Safari versions"
-],
+    "last 2 Chrome versions",
+    "last 2 Edge versions",
+    "last 2 Firefox versions",
+    "last 2 Safari versions"
+  ],
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-accordion": "^1.2.10",
+    "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.6",
