--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,7 @@
 {
   "headers": [
     {
-      "source": "/(.*)",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=3600"
-        }
-      ]
+      "source": "/(.*)"
     }
   ]
 }
