--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,10 @@
 {
-  "version": 2,
-  "builds": [
+  "headers": [
     {
-      "src": "next.config.js",
-      "use": "@vercel/next"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/$1"
+      "source": "/(.*)",
+      "headers": [
+        
+      ]
     }
   ]
 }
